--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body{"background-color: dimgrey;"
  <a href="CSS.html">CSS painting</a>
   <a href="Kguillen_ART2602c_3pages.html">Three pages project</a>
   <a href="mbs.html">Mind Body Spirit</a>
-  <a href= "netart01.html"> NET ART START HERE This is the update</a>
+  <a href= "netart01.html"> NET ART START HERE</a>
     
     
         <h3></h3>
