--- a/netart01.html
+++ b/netart01.html
@@ -13,17 +13,39 @@
             background-color:black;
         }
         #stone1{
-            postion: absolute;
+            position: absolute;
             height: 800px;
             width: 1200px;
             z-index: 1;
+            top:0px;
+            right:0px;
         }
         #stone2{
-            postion: absolute;
+            position: absolute;
             height:800px;
-            width:1200px;
+            width: 1200px;
             z-index: 2;
-         }
+            top: 50px;
+            right:50px;
+            left:150px;
+            bottom: 400px;
+  }
+        #eye{
+            position: absolute;
+            height: 800px;
+            width:1200px;
+            z-index: 3;
+            top: 300px;
+            right: 20px;
+            left: 460px;
+            bottom: 30px;
+
+
+
+
+
+
+        }
       
           
    </style>
@@ -31,10 +53,11 @@
  <body>
     <div id="container">
  <div id="stone1"><img src="stone1.jpg"></div>
- <img src="stone2.jpg">
+ <div id="stone2"><img src="stone22.jpg"></div>
+ <div id="eye"><img src= "maineyeball.png"></div>
 
- </div>
- -
+
+
  </div>
 
 
