--- a/Cadandmodel.html
+++ b/Cadandmodel.html
@@ -5,14 +5,14 @@
 <body style= "background-color:palegoldenrod;"></body>
 
 <h1> CAD MODEL & 3D PRINT</h1>
-<p> This assighment consisted of designing a model for 3d printing. This was done in 
+<p> This assignment consisted of designing a model for 3D printing. This was done in 
     TinkerCad. The jet is based off the F1 Raptor Jet. I created the jet by breaking
-it down to the simplest of shapes. The following images display the model in 3D as well as it
-it's design and model.  </p>
+it down into the simplest of shapes. The following images display the model in 3D as well as 
+its design and model.  </p>
 
 <img src="Aircraft1.png">
 <img src="aircraft2.png">
-<img src="3draptor.png">
+<img src="3draptor.png"style="width:300px" style="height:300px" >
 <a href="index.html">home page</a>
 
 </head>
