--- a/Solder project.html
+++ b/Solder project.html
@@ -5,11 +5,12 @@
 </head>
 <body style= "background-color:rgb(158, 130, 186);"></body>
 <h1> Solder Project</h1>
-<p> For this worshop I learned how to sssemble and solder an
+<p> For this workshop I learned how to sssemble and solder an
     electronics kit. I was introduced to a variety of tools and a 
-    printed circuit Board. With the tools and board we were given our final product would be 
-    functioning LED's that lit up due to its sensor. 
+    printed circuit Board. With the tools and board we were given, our final product would be 
+    functioning LED's that lit up due to its sensor. The video below displays the LED's in action.
 </p>
 <a href="https://drive.google.com/file/d/1R2CtioJKaqOqwe-49LCARdBqiNkLqbPK/view?usp=sharing">Example Video</a>
+
 
 </html>
