--- a/guillen_ART2602c_3pages.html
+++ b/guillen_ART2602c_3pages.html
@@ -13,4 +13,5 @@
     <h3>Alfonso</h3>
     <img src="Alfonso1.jpg" alt="Alfonso cat" Style="width:300px" Style="height:300px">
     <img src="Alfonso 2.jpg" alt="Cat Aflonso" Style="width:300px" Style="height:300px">
+    <a href="index.html">Home page</a>
 </body>
