--- a/kguillen_part2.html
+++ b/kguillen_part2.html
@@ -13,4 +13,5 @@
     <h3> Two accurate pictures depicting how I felt that Wednesday morning.</h3>
     <img src= "Mad cat.jpg" alt="Mad kitty" style="width:300px" style="height:300px">
     <img src= "shocked cat.jpg" alt= "suprised cat" style="width:300px" style="height:300px">
+    <a href="index.html">Home Page</a>
 </body>
