--- a/kguillen_part2.page 2.html
+++ b/kguillen_part2.page 2.html
@@ -1,7 +1,7 @@
 <!Doctype>
 <html>
     <head>
-        <title>< Title of he document</title>
+        <title> Title of the document</title>
         <body style= "background-color:palegoldenrod;"></body>
         <body>
         <h1>What I did last Wednesday Part 2 Alfonso pov.</h1>
