--- a/kguillen_part3.html
+++ b/kguillen_part3.html
@@ -13,4 +13,5 @@
     <h3> Manchitas</h3>
     <img src= "manchitas 1.jpg" alt="Kitten" style="width:300px" style="height:300px">
     <img src= "brothers.jpg" alt="brother cats" style="width:300px" style="height:300px">
+    <a href="index.html">home Page</a>
     </body>
