--- a/Cadandmodel.html
+++ b/Cadandmodel.html
@@ -10,9 +10,10 @@
 it down into the simplest of shapes. The following images display the model in 3D as well as 
 its design and model.  </p>
 
-<img src="Aircraft1.png">
-<img src="aircraft2.png">
-<img src="3draptor.png"style="width:300px" style="height:300px" >
+<img src="Aircraft1.png"style="width:500px" style="height:500px">
+<img src="aircraft2.png"style="width:500px" style="height:500px">
+<img src="3draptor.png"style="width:500px" style="height:500px" >
+
 <a href="index.html">home page</a>
 
 </head>
